# Entity-Component-System

./: .clangd  .gitignore  .gitmodules  Base.hpp  CMakeLists.txt  CompilerFlags.cmake  Component.hpp  ECS.hpp  Entity.hpp  Main.cpp  README.md  System.hpp  cachegrind.out.1323519  cachegrind.out.1329365  test.md
.cache/clangd/index/: 01-UnorderedDenseMap.test.cpp.7D878869E122589D.idx  02-TypeMap.test.cpp.B17D2F000EBAAAC9.idx  Component.test.cpp.A2E7B4C50B23C14F.idx  Concepts.hpp.D1F19262520473F8.idx  Core.hpp.7DFC2150F738BBA3.idx  Entity.test.cpp.1F268DAE1FC3043B.idx  Forward.hpp.F4AA7136722CEBAC.idx  System.test.cpp.10B661B74E401D4C.idx  UnorderedDenseMap.hpp.562E60E1F1BFEA5E.idx  Utils.hpp.B2E66A636727A488.idx  World.test.cpp.F97266288E001413.idx
CMake/: CompilerFlags.cmake  Options.cmake  Packages.cmake
Examples/: 01-FallingDownShapes.cpp  01-VectorOperations.cpp  02-UserControlledShape.cpp  03-FallingDownShapes.cpp  CMakeLists.txt  FallingDownShapes.cpp  UserControlledShape.cpp
Examples/Data/: Ex02_O3_cache.valgrind.txt  Ex03_O3_cache.valgrind.txt
Include/: Base.hpp  CMakeLists.txt  Component.hpp  ECS.hpp  Entity.hpp  System.hpp
Include/ECS/: Base.hpp  Component.hpp  ECS.hpp  Entity.hpp  System.hpp  World.hpp
Include/Tora/: Base.hpp  System.hpp
Include/Tora/Container/: SparseVector.hpp  TypeMap.hpp
Include/Tora/Core/: Concepts.hpp  Core.hpp  Forward.hpp  SparseVector.hpp  TemplateMap.hpp  TypeMap.hpp  Utils.hpp
Include/Tora/Impl/: Tora.hpp  World.hpp
Include/Ushi/: Forward.hpp  Ushi.hpp
Include/Ushi/Container/: PolyTypeTable.hpp  TypeErasedVector.hpp  UDenseMap.hpp  UDenseTypeTable.hpp  UnorderedDenseMap.hpp  VectorWrapper.hpp
Include/Ushi/Core/: Concepts.hpp  Core.hpp  Defs.hpp  Forward.hpp  Platforms.hpp  Typenames.hpp  Utils.hpp
Include/Ushi/Impl/: Component.hpp  Entity.hpp
Include/Ushi/Impl/Component/: Component.hpp  ComponentImpl.hpp  ComponentRecord.hpp  ComponentTable.hpp
Include/Ushi/Impl/Config/: Config.hpp
Include/Ushi/Impl/Entity/: Entity.hpp  EntityFactory.hpp  EntityID.hpp  EntityImpl.hpp  EntityManager.hpp  EntityObserver.hpp
Include/Ushi/Impl/Group/: Archetype.hpp  Group.hpp  GroupFactory.hpp  GroupImpl.hpp  GroupNetwork.hpp  GroupTable.hpp  ParallelFetch.hpp  PolyTypeTable.hpp
Include/Ushi/Impl/System/: System.hpp  SystemImpl.hpp  SystemManager.hpp
Include/Ushi/Impl/World/: World.hpp
Include/Ushi/Interface/: Forward.hpp  Public.hpp
Source/: Base.hpp  Component.hpp  Entity.hpp  System.hpp  World.hpp
Test/: 01-Concepts.test.cpp  01-SparseVector.test.cpp  01-UDenseMap.test.cpp  01-UnorderedDenseMap.test.cpp  02-Concepts.test.cpp  02-Entity.test.cpp  02-TypeMap.test.cpp  02-UnorderedDenseMap.test.cpp  03-Entity.test.cpp  03-PolyTypeTable.test.cpp  03-TypeErasedVector.test.cpp  03-UDenseTable.test.cpp  03-WorldSingleton.test.cpp  04-Component.test.cpp  04-WorldSingleton.test.cpp  05-Component.test.cpp  05-System.test.cpp  06-Entity.test.cpp  06-Group.test.cpp  07-System.test.cpp  07-World.test.cpp  08-Group.test.cpp  09-System.test.cpp  10-World.test.cpp  11-Usages.test.cpp  CMakeLists.txt  DynamicBiset.txt  SparseVector.test.cpp  TestBasic.cpp  TestUtils.hpp
Tests/: CMakeLists.txt  TestBasic.cpp  TestEntityManager.cpp
